<resources>
    <string name="app_name">Gaming Interface Client</string>
    <string name="title_activity_game_interface">Game Interface</string>
    <string name="hint_url">Address</string>
    <string name="hint_port">Port Number</string>
    <string name="hint_password">Password</string>
    <string name="button_start">Start</string>
    <string name="title_activity_edit">Edit Activity</string>
    <string name="button_edit">Edit</string>
    <string name="fragment_edit_button_save">Save</string>
    <string name="fragment_edit_button_delete">Delete</string>
    <string name="fragment_edit_text_text">Button Text</string>
    <string name="fragment_edit_text_left_shift">Shift</string>
    <string name="fragment_edit_text_left_ctrl">Ctrl</string>
    <string name="fragment_edit_text_left_alt">Alt</string>
    <string name="fragment_edit_text_right_shift">RShift</string>
    <string name="fragment_edit_text_right_ctrl">RCtrl</string>
    <string name="fragment_edit_text_right_alt">RAlt</string>
    <string name="activity_edit_button_save">Save</string>
    <string name="title_fragment_edit">Edit</string>
    <string name="main_warning">Warning - do NOT use an existing password that you use ANYWHERE else!</string>
    <string name="edit_help_message">To start adding controls, double tap on the screen.  Tap on a control to reselect it</string>
    <string name="edit_fragment">Select a Key:</string>
    <string name="edit_activity_edit_mode">Edit Mode</string>
    <string name="edit_activity_drag_mode">Drag and Drop mode</string>
    <string name="edit_activity_detail_edit_mode">Detail Edit mode</string>
    <string name="edit_activity_saved">Saved Successfully!</string>
    <string name="activity_main_about">About</string>
    <string name="main_activity_warning"> </string>
    <string name="main_activity_server_link">https://github.com/Terence-D/GameInputCommandServer</string>
    <string name="version">Version: %1$s (build %2$d)</string>
    <string name="libraries">3rd Party Libraries</string>
    <string name="about_crypto_title">Encryption library by Mataprasad</string>
    <string name="legal_crypto">Licensed under the MIT License.  See below for details</string>
    <string name="website_crypto">https://github.com/mataprasad/Cross-platform-AES-encryption-128bit/blob/master/LICENSE</string>
    <string name="about_color_picker">Color Picker</string>
    <string name="legal_color">Licensed under the Apache 2.0 license.  See below for details</string>
    <string name="website_color"><![CDATA[https://android-arsenal.com/details/1/1693]]></string>
    <string name="about_easy_permissions">Easy Permissions Library</string>
    <string name="legal_easy_permissions">Licensed under the Apache 2.0 License.  See below for details</string>
    <string name="website_easy_permissions">https://github.com/googlesamples/easypermissions</string>
    <string name="about_onboarding_title">Material Intro</string>
    <string name="legal_onboarding">Licensed under the MIT License.  See below for details</string>
    <string name="website_onboarding">https://github.com/heinrichreimer/material-intro#left-back-button</string>
    <string name="about_help_title">Material Tap Target Prompt</string>
    <string name="legal_help">Licensed under the Apache 2.0 License.  See below for details</string>
    <string name="website_help">https://github.com/sjwall/MaterialTapTargetPrompt</string>
    <string name="legal">Legal</string>
    <string name="legal_contents">GIC Client (this software) and the GIC Server are open source products and combined are used to act as a remote control style device for your PC.  Copyright 2019 Terence Doerksen</string>
    <string name="website_apache">http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="website_git">https://github.com/Terence-D/GamingInterfaceClientAndroid/wiki</string>
    <string name="activity_main_help_button">Help (Website)</string>
    <string name="edit_activity_settings">Settings</string>
    <string name="color_picker_title">Color Picker</string>
    <string name="edit_fragment_font_color">Font Color</string>
    <string name="edit_fragment_button_color_1">Primary Color</string>
    <string name="edit_fragment_button_color_2">Secondary Color</string>
    <string name="activityAboutServerDesc">To use this you need to run GIC Server (also Open Source) on your Windows computer where the game resides.  Please visit the link below for further information</string>
    <string name="password_invalid">Please enter a password of at least 6 characters</string>
    <string name="port_invalid">Invalid Port number</string>
    <string name="address_invalid">Please enter a valid address pointing to your computer running GIC Server</string>
    <string name="default_control_text">New</string>
    <string name="edit_fragment_settings_image">Image</string>
    <string name="edit_fragment_settings_color_1">Color</string>
    <string name="edit_fragment_settings_color_2">Secondary Color</string>
    <string name="control_type_button">Button</string>
    <string name="control_type_text">Text</string>
    <string name="control_type_image">Image</string>
    <string name="edit_fragment_image_delete">Delete</string>
    <string name="edit_fragment_image">Image</string>
    <string name="edit_fragment_image_title">Image Editor</string>
    <string name="fragment_edit_control_switch_button_graphic">Button Graphics</string>
    <string name="fragment_edit_control_switch_button_type">Quick Mode</string>
    <string name="image_grid_title">Choose Image</string>
    <string name="item_grid_text">Import</string>
    <string name="item_grid_text_image">Image</string>
    <string name="item_text_import">Import</string>
    <string name="item_text_default">Default</string>
    <string name="fragment_edit_button_normal">Normal</string>
    <string name="fragment_edit_button_pressed">Pressed</string>
    <string name="fragment_edit_font_typeface">Font</string>
    <string name="fragment_toggle_on">Toggle On Command</string>
    <string name="fragment_toggle_off">Toggle Off Command</string>
    <string name="fragment_toggle_text">Switch Text</string>
    <string name="control_type_switch">Switch</string>
    <string name="fragment_edit_toggle_off">Off</string>
    <string name="fragment_edit_toggle_on">On</string>
    <string name="activity_main_server_upgrade_title">Server Mismatch</string>
    <string name="activity_main_server_upgrade_text">The GIC Server appears to be out of date - please upgrade to the latest version by clicking on the \"Website\" link on the server.  If you did not yet install the server, click the Help link below,</string>
    <string name="title_activity_screen_manager">Screen Manager</string>
    <string name="activity_screens_new">New</string>
    <string name="activity_screens_update">Update</string>
    <string name="activity_screens_import">Import</string>
    <string name="activity_screens_export">Export</string>
    <string name="activity_screens_delete">Delete</string>
    <string name="loading">Please Wait…</string>
    <string name="connecting">Connecting…</string>
    <string name="need_permission">This action requires you to enable write access.  After accepting, you will need to click on the button again to begin the Import/Export.</string>
    <string name="export_complete">Export Complete!</string>
    <string name="zip_successful">File successfully exported: Downloads/</string>
    <string name="activity_main_screen_manager">Screen Manager</string>
    <string name="cannot_delete_last_item">Cannot remove last screen!</string>
    <string name="activity_screens_confirm_delete"><![CDATA[Are you sure you wish to PERMANENTLY delete <b>%1$s</b>?]]></string>
    <string name="import_successful">Import Successful</string>
    <string name="invalid_zip">Invalid Zip File!</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_toggle_theme">Toggle Theme</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_main">GIC</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="slideIntroTitle">Welcome!</string>
    <string name="slideIntroDesc">Thank you for installing GIC - the open source Game Interface Client.  Ahead are just a few tips to help you get started.  This will only be shown once - tap on the bottom right corner arrow to begin.</string>
    <string name="slideServerTitle">Server</string>
    <string name="slideServerDesc">GIC requires software on the computer your communicating with.  The link is in inside the "About" view from the main screen.  Alternatively clicking this button will open your email app with the link to the server inside.</string>
    <string name="slideAboutTitle">About</string>
    <string name="slideAboutDesc">GIC allows you to create fully customizable interfaces (screens) to send commands to an app on your computer.  Useful for complex sim type games, but GIC can be used for any app or game that you like.  You can also share your screens with others!</string>
    <string name="slideLetsGoTitle">Questions?</string>
    <string name="slideLetsGoDesc">I\'ve added Help sections to each part of this app - click the \'?\' at the top right corner of the app for help!  Thank you for using GIC!</string>
    <string name="slideSendLink">Send Link</string>
    <string name="slideScreenTitle">Screen Starter</string>
    <string name="slideScreenDesc">If you like you can pick one (or more!) of the screens I\'ve built below as a starting point, or you can skip this step and build your own.!</string>
    <string name="aboutServer">Server</string>
    <string name="edit_fragment_settings_title">Settings</string>
    <string name="edit_fragment_title">Edit</string>
    <string name="edit_fragment_settings_grid_title">Grid Size</string>
    <string name="edit_text_left">Left</string>
    <string name="edit_text_top">Top</string>
    <string name="edit_text_width">Width</string>
    <string name="edit_text_height">Height</string>
    <string name="edit_text_font_size">Font Size</string>
    <string name="slideScreenImportButton">Import</string>
    <string name="slideScreenSuccess">Screens Imported!</string>
    <string name="menu_show_intro">Show Intro</string>
    <string name="help_menu_icon_title">Help is a Tap Away</string>
    <string name="help_menu_icon_desc">Tapping this icon will explain whats on your devices screen and is available through most of the application</string>
    <string name="help_address_title">Server Address</string>
    <string name="help_address_desc">Type the IP Address of the computer running the server.  This can be found  in Windows 10 by going into Settings, then Network and Internet, and usually starts with \"192\"</string>
    <string name="help_port_title">Network Port</string>
    <string name="help_port_desc">This has to match on the server end - by default its 8091</string>
    <string name="help_password_title">Password</string>
    <string name="help_password_desc">This has to match on the server as well, and is used to provide some security</string>
    <string name="help_spinner_title">Screen List</string>
    <string name="help_spinner_desc">This will let you select different screens you have created to use</string>
    <string name="help_screenmanager_title">Screen Manager</string>
    <string name="help_screenmanager_desc">Tapping on this will open up the Screen Manager where you can create, edit, delete, and import/export other screens</string>
    <string name="help_start_title">Start</string>
    <string name="help_start_desc">Tapping this will connect to the server and let you start with the screen you\'ve selected</string>
    <string name="help_addNew_desc">Tap here to add a another screen to the app</string>
    <string name="help_addNew_title">Add New</string>
</resources>